--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-international-phone": "^4.2.5",
+    "swiper": "^11.0.6",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
